# AnnexIV-Core

./: .gitignore  README.md  Untitled-1.txt  demo_ml_training.py  docker-compose.yml
1_solana_program/: Anchor.toml
1_solana_program/programs/annex_iv_registry/: Cargo.toml
1_solana_program/programs/annex_iv_registry/src/: lib.rs
2_backend_ai/: Dockerfile  id.json  pyproject.toml  requirements.txt
2_backend_ai/app/: main.py
2_backend_ai/app/ai_agents/: decision.py
2_backend_ai/app/blockchain/: solana_tx.py
2_backend_ai/app/storage/: arweave_mock.py  ipfs_storage.py
2_backend_ai/reports/: Finance-Credit-Model-v1_bafkreib.json  Finance-Credit-Model-v1_bafkreic.json  Finance-Credit-Model-v1_bafkreid.json  Finance-Credit-Model-v1_bafkreie.json  Finance-Credit-Model-v1_bafkreig.json  Finance-Credit-Model-v1_bafkreih.json  GPT-4-Finance-Bot_a9b9f601.json
3_frontend_dashboard/: Dockerfile  package-lock.json  package.json
3_frontend_dashboard/app/: page.tsx
4_sensor_go/: go.mod  main.go
